# m6502_emulator

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  makefile  makefile.bak
.cache/clangd/index/: cpu.cpp.07A8C09F2B0FBE37.idx  cpu.cpp.6E608F417ED1A0ED.idx  cpu.hpp.7074D92542807591.idx  cpu.hpp.DBB020177A9D7069.idx  main.cpp.7E010E713833CDE3.idx  main.cpp.938841FC1E603A6B.idx  memory.cpp.010B97F9C072E19D.idx  memory.cpp.27533F0DD9FD1DE5.idx  memory.hpp.A4FD0BAAECAC7860.idx  memory.hpp.D55EA6FC228082AC.idx  tests.hpp.604EABC8B382900B.idx  types.hpp.764D2022398DC6CA.idx  types.hpp.D40C85CC3D257EAD.idx
assembler/: CMakeLists.txt
assembler/include/: assembler.hpp  instructions.hpp  lexer.hpp  types.hpp
assembler/src/: assembler.cpp  lexer.cpp
assembler/tests/: CMakeLists.txt  tests.cpp  tests.hpp
assembler/tests/programs/: tokens.asm
demo/: CMakeLists.txt  test.asm
demo/src/: main.cpp
emulator/: CMakeLists.txt
emulator/include/: cpu.hpp
emulator/src/: cpu.cpp
emulator/tests/: CMakeLists.txt  tests.cpp  tests.hpp
include/: assembler.hpp  cpu.hpp  memory.hpp  tests.hpp  types.hpp
src/: cpu.cpp  main.c  main.cpp  memory.cpp
